[package]
name = "tsuna"
version = "0.1.0"
edition = "2021"
description = "Desktop client for the Pushover Open Client API"
license = "GPL-2.0-only"
keywords = ["pushover", "client"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
zbus = { version = "3", default-features = false, features = ["tokio"] }
notify-rust = "4"
clap = { version = "4", features = ["derive"] }
reqwest = { default-features = false, version = "0.11", features = [ "native-tls", "gzip", "json" ] }
websocket = { version = "0.26", default-features = false, features = [ "async-ssl" ] }
rpassword = "7.0"
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
oo7 = { version = "0.1.0-alpha.5", default-features = false, features = [ "tokio" ] }
