[package]
name = "tsuna"
version = "0.2.3"
edition = "2021"
description = "Desktop client for the Pushover Open Client API"
license = "GPL-2.0-only"
keywords = ["pushover", "client"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
notify-rust = { version = "4", features = ["async"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2.0"
clap = { version = "4", features = ["derive"] }
reqwest = { default-features = false, version = "0.12", features = [ "native-tls", "gzip", "json" ] }
rpassword = "7.0"
anyhow = "1.0"
async-tungstenite = { version = "*", features = [ "tokio-native-tls" ] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
oo7 = { version = "^0.4", default-features = false, features = [ "tokio", "openssl_crypto" ] }
xdg = "^3"
console-subscriber = "^0.4"
tokio-stream = "^0.1"

[profile.release]
lto = true
overflow-checks = true
opt-level = 3
codegen-units = 1
